# summaries_youtube

./: .gitignore  README.md  check_date.py  check_search_date.py  h origin dev --force  inspect_pytubefix.py  pyproject.toml  reproduce_toc.py  requirements.txt
.streamlit/: config.toml
src/: ._env  __init__.py  app.py  cli.py  config.py  downloader.py  exporter.py  inspect_filter_sort.py  launch.py  locate_pytubefix.py  prompts.py  repro_confirm.py  repro_full.py  repro_pdf.py  repro_search.py  set_ngrok_token.py  summarizer.py  test.py  transcriber.py  utils.py  verify_sort.py  workflow.py
src/assets/: streamlit_app.css  style.css
src/chunk_data/: segment_appmillers_by_elshad_karimov_15-47-32.txt  segment_cnews_15-34-10.txt  segment_codewithprashant_15-45-59.txt  segment_echo_14-46-58.txt  segment_flechdata_consulting_15-48-53.txt  segment_la_nouvelle_école_-_programmation_14-46-24.txt  segment_valétudo_15-41-15.txt
src/segments_text/: segment_0.txt  segment_1.txt  segment_10.txt  segment_11.txt  segment_12.txt  segment_13.txt  segment_14.txt  segment_15.txt  segment_16.txt  segment_2.txt  segment_3.txt  segment_4.txt  segment_5.txt  segment_6.txt  segment_7.txt  segment_8.txt  segment_9.txt
src/src/debug_prompts/check_synthese/: 20251210_085341.txt  20251210_090444.txt  20251210_092413.txt  20251210_183600.txt
summaries/: la_robotique_derniere_avancées_2025-11-23.md  le_chaos_inévitable_du_problème_à_3_corps_même_einstein_refusait_dy_toucher_2025-11-23.md  robotics_llm_advances_2025_2025-11-23.md  robots_2025-11-23.md  réunion_pilotage_direction_de_campus-20251125_093453-enregistrement_de_la_réunion_2025-11-29.md
test_full_output/: test_1_-_markdown_input_2025-12-05.html  test_1_-_markdown_input_2025-12-05.txt  test_2_-_html_input_2025-12-05.html  test_2_-_html_input_2025-12-05.md
tests/: __init__.py  test_downloader.py  test_exporter.py  test_summarizer.py  test_transcriber.py  test_utils.py
(+260 files in other folders)
