[project]
name = "test-whisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "torch>=2.10.0.dev0",
    "torchvision",
    "torchaudio",
    "moviepy",
    "pydub>=0.25.1",
    "rich>=14.2.0",
    "openai-whisper>=20231106",
    "ollama>=0.6.1",
    "numpy<2",
    "pytubefix>=10.3.5",
]

[tool.uv]
package = true
index-strategy = "unsafe-best-match"
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/nightly/cu126"]

[project.scripts]
summarize-video = "summarize_video.cli:main"
